@@ -250,6 +250,9 @@ Optimizations
 
 * SOLR-4955: Admin UI - Show address bar on top for Schema + Config (steffkes)
 
+* SOLR-4412: New parameter langid.lcmap to map detected language code to be placed 
+  in "language" field (janhoy)
+
 Other Changes
 ----------------------
 
